--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-icons": "^5.3.0",
     "sonner": "^1.5.0",
     "swiper": "^11.1.9",
     "swr": "^2.2.5",
