--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.3.0",
     "sonner": "^1.5.0",
+    "sweetalert2": "^11.12.4",
     "swiper": "^11.1.9",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.4.0",
