--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-table": "^8.19.3",
+    "@types/dompurify": "^3.0.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dompurify": "^3.1.6",
     "dotenv": "^16.4.5",
+    "html-react-parser": "^5.1.15",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.418.0",
     "next": "14.2.5",
